--- a/html/home.html
+++ b/html/home.html
@@ -11,8 +11,8 @@
 <body>
     <section class="head">
         <nav>
-            <a href="/html/home.html" class="logo">
-                <img src="/Hotel logo.png" alt="Magnolia Logo">
+            <a href="/html/home.html" class="logo">Magnolia
+
             </a>
     
             <div class="links">
@@ -20,7 +20,7 @@
                     <li><a href="home.html">HOME</a></li>
                     <li><a href="/html/AboutUs.html">ABOUT US</a></li>
                     <li><a href="">CONTACT US</a></li>
-                    <li><a href="/html/BookingPage.html">BOOKINGS</a></li>
+                    <li><a href="/html/Rooms.html">BOOKINGS</a></li>
                     <li><a href="/html/login.html">LOGIN</a></li>
                 </ul>
             </div>
