--- a/html/home.html
+++ b/html/home.html
@@ -65,7 +65,7 @@
         </div>
     </section>
 
-    <section class="content2">
+    <section class="details">
         <h2>Who Are We ?</h2>
         <p>Immerse yourself in the epitome of luxury at our hotel, 
             where world-class amenities and personalized service redefine hospitality.
