--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -27,10 +27,13 @@
         <div class="row">
             <div class="col">
                 <h1>MAGNOLIA</h1>
-                <p>The story begins in the fifties of the twentieth century in Saudi Arabia, where a Saudi man hosted passers-by and travelers.
-                His five children are accustomed to seeing their father host people and assist them. He used to provide them with food, drinks, and comfortable bedding.
-                The five children grew up, and their love of hospitality and helping grew as well, and In order to prevent the loss of their father's customs, they opened the <b>Magnolia Hotel</b>.
-                This large hotel chain was established in the early 1980s with the goal of redefining the concept of luxury and comfort in the hotel industry. As a leading provider of hosting services, we ensure that our visitors have a memorable experience.</p>
+                <p>In the 1950s, in the town of Riyadh, a Saudi family, raised five children with hearts full of kindness. father's act of helping those in need by providing food and shelter left a lasting impression on them.
+
+                    As the children grew, they decided to create something to honor their father's legacy. In 1972 They launched a "magnolia" The hotel, born from a shared desire to continue their father's mission, provided shelter and meals to anyone in need.
+                    
+                    The<b> Magnolia Hotel</b> became a symbol of hope and kindness in Saudi Arabia and many other countries. The siblings continued their father's mission of serving the community, offering not just lodging but a sense of belonging.
+                    
+                    Today, <b>magnolia</b> stands as a beacon of love and compassion, a testament to the enduring power of family values and a commitment to making the world a better place.</p>
                 <div class="social-link">
                     <a href="https://twitter.com/HiltonHotels" class="fa fa-twitter"></a>
                     <a href="https://www.instagram.com/magnolia_hotelsa/" class="fa fa-instagram"></a>
