--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="AboutUsstyle.css">
-    
+    <link rel="stylesheet" href="/css/AboutUsStyle.css">
+
     
 </head>
 <body>
@@ -15,11 +15,11 @@
             <!-- <img src="logo.png" class="logo"> -->
             <nav>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">CONTACT US</a></li>
-                    <li><a href="">BOOKINGS</a></li>
-                    <li><a href="">LOGIN</a></li>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="/html/AboutUs.html">ABOUT US</a></li>
+                    <li><a href="/html/ContactUs.html">CONTACT US</a></li>
+                    <li><a href="/html/Rooms.html">ROOMS</a></li>
+                    <li><a href="/html/login.html">LOGIN</a></li>
                 </ul>
             </nav>
             <!-- <img src="menu.png" class="menu"> -->
