--- a/html/ContactUs.html
+++ b/html/ContactUs.html
@@ -6,7 +6,7 @@
     <title>Contact us</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="ContactUsStyle.css">
+    <link rel="stylesheet" href="/css/ContactUsStyle.css">
 </head>
 <body>
 
@@ -15,11 +15,11 @@
             <!-- <img src="logo.png" class="logo"> -->
             <nav>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">CONTACT US</a></li>
-                    <li><a href="">BOOKINGS</a></li>
-                    <li><a href="">LOGIN</a></li>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="/html/AboutUs.html">ABOUT US</a></li>
+                    <li><a href="/html/ContactUs.html">CONTACT US</a></li>
+                    <li><a href="/html/Rooms.html">ROOMS</a></li>
+                    <li><a href="/html/login.html">LOGIN</a></li>
                 </ul>
             </nav>
             <!-- <img src="menu.png" class="menu"> -->
