--- a/html/Rooms.html
+++ b/html/Rooms.html
@@ -22,7 +22,7 @@
                     <li><a href="/html/AboutUs.html">ABOUT US</a></li>
                     <li><a href="/html/ContactUs.html">CONTACT US</a></li>
                     <li><a href="/html/Rooms.html">ROOMS</a></li>
-                    <li><a href="/html/login.html">LOGIN</a></li>
+                    <li><a href="/html/Login/login.html">LOGIN</a></li>
                 </ul>
             </div>
         </nav>
