--- a/html/Login/Register.html
+++ b/html/Login/Register.html
@@ -19,8 +19,21 @@
 
 	</head>
 	<body>
+		<nav>
+			<a href="/html/home.html" class="logo">MAGNOLIA</a>
+			<div class="links">
+				<ul>
+					<li><a href="/html/home.html">HOME</a></li>
+					<li><a href="/html/AboutUs.html">ABOUT US</a></li>
+					<li><a href="/html/ContactUs.html">CONTACT US</a></li>
+					<li><a href="/html/Rooms.html">ROOMS</a></li>
+					<li><a href="/html/Login/login.html">LOGIN</a></li>
+				</ul>
+			</div>
+		</nav>
+		<div class="container">
 		<div class="log">
-            <form action="">
+            <form action="/php/register.php">
 
                 <h1>Register</h1>
 
@@ -48,13 +61,15 @@
                     <i class='bx bxs-lock-alt' ></i>
                 </div>
 
-
+				<div class="register">
+					<p>Have an account ? <a href="/html/Login/login.html">Login</a></p>
+				</div>
 
                 <button type="submit" class="btn">Sign up</button>
 
 
             </form>
-
+		</div>
         </div>
 	</body>
 </html>
