--- a/html/home.html
+++ b/html/home.html
@@ -21,7 +21,7 @@
                     <li><a href="/html/AboutUs.html">ABOUT US</a></li>
                     <li><a href="/html/ContactUs.html">CONTACT US</a></li>
                     <li><a href="/html/Rooms.html">ROOMS</a></li>
-                    <li><a href="/html/login.html">LOGIN</a></li>
+                    <li><a href="/html/Login/login.html">LOGIN</a></li>
                 </ul>
             </div>
         </nav>
@@ -118,7 +118,9 @@
 
 
 
-
+    <section class="footer">
+        <p>&copy; 2023 Magnolia Hotel. All rights reserved.</p>
+    </section>
 
 
 
@@ -130,9 +132,7 @@
     </script>
 
 
-<section class="footer">
-    <p>&copy; 2023 Magnolia Hotel. All rights reserved.</p>
-</section>
+
 
     <script>
         let slideIndex = 0;
