--- a/html/Login/forgetPass.html
+++ b/html/Login/forgetPass.html
@@ -1,53 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="author" content="Muhamad Nauval Azhar">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="description" content="This is a login page template based on Bootstrap 5">
-	<title>Bootstrap 5 Login Page</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Forgot Password</title>
+    <link rel="stylesheet" href="/css/stylesLogin.css">
 </head>
-
 <body>
-	<section class="h-100">
-		<div class="container h-100">
-			<div class="row justify-content-sm-center h-100">
-				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
 
-					<div class="card shadow-lg">
-						<div class="card-body p-5">
-							<h1 class="fs-4 card-title fw-bold mb-4">Forgot Password</h1>
-							<form method="POST" class="needs-validation" novalidate="" autocomplete="off">
-								<div class="mb-3">
-									<label class="mb-2 text-muted" for="email">E-Mail Address</label>
-									<input id="email" type="email" class="form-control" name="email" value="" required autofocus>
-									<div class="invalid-feedback">
-										Email is invalid
-									</div>
-								</div>
+<nav>
+    <a href="/html/home.html" class="logo">MAGNOLIA</a>
+    <div class="links">
+        <ul>
+            <li><a href="/html/home.html">HOME</a></li>
+            <li><a href="/html/AboutUs.html">ABOUT US</a></li>
+            <li><a href="/html/ContactUs.html">CONTACT US</a></li>
+            <li><a href="/html/Rooms.html">ROOMS</a></li>
+            <li><a href="/html/Login/login.html">LOGIN</a></li>
+        </ul>
+    </div>
+</nav>
 
-								<div class="d-flex align-items-center">
-									<button type="submit" class="btn btn-primary ms-auto">
-										Send Link	
-									</button>
-								</div>
-							</form>
-						</div>
-						<div class="card-footer py-3 border-0">
-							<div class="text-center">
-								Remember your password? <a href="index.html" class="text-dark">Login</a>
-							</div>
-						</div>
-					</div>
-					<div class="text-center mt-5 text-muted">
-						Copyright &copy; 2017-2021 &mdash; Your Company 
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+<div class="container">
+    <div class="log">
+        <form action="/php/reset-password.php" method="post">
+            <h1>Forgot Password</h1>
 
-	<script src="/JavaScript/login.js"></script>
+            <p>Enter the email address associated with your account, and we'll send you a link to reset your password.</p>
+
+            <div class="box">
+				
+                <label for="email">Email Address</label>
+                <input type="email" name="email" id="email" placeholder="Enter your email" required>
+            </div>
+
+            <button type="submit" class="btn">Send Reset Link</button>
+
+            <div class="login-link">
+                <p>Remember your password? <a href="/html/Login/login.html">Login</a></p>
+            </div>
+        </form>
+    </div>
+</div>
+
+<section class="footer">
+    <p>&copy; 2023 Magnolia Hotel. All rights reserved.</p>
+</section>
+
 </body>
 </html>
