--- a/html/Login/login.html
+++ b/html/Login/login.html
@@ -39,7 +39,7 @@
 
             <div class="forget-remember">
                 <label for=""></label><input type="checkbox">Remember me
-                <a href="#">Forget Password ?</a>
+                <a href="/html/Login/forgetPass.html">Forget Password ?</a>
             </div>
 
             <button type="submit" class="btn">Login</button>
@@ -58,5 +58,3 @@
 </body>
 
 </html>
-
-
