--- a/html/home.html
+++ b/html/home.html
@@ -156,6 +156,29 @@
         }
         </script>
         
+
+
+        <script>
+            // JavaScript to include the login modal
+            document.addEventListener("DOMContentLoaded", function () {
+                fetch('/html/Login/login-popup.html')
+                    .then(response => response.text())
+                    .then(html => {
+                        const popupContainer = document.createElement('div');
+                        popupContainer.innerHTML = html;
+                        document.body.appendChild(popupContainer);
+                        
+                        // Add event listener to the LOGIN link to show the modal
+                        const loginLink = document.querySelector('.links li a[href="/html/Login/login.html"]');
+                        loginLink.addEventListener('click', function (event) {
+                            event.preventDefault();
+                            showPopup();
+                        });
+                    })
+                    .catch(error => console.error('Error fetching login-popup.html:', error));
+            });
+        </script>
+
 </body>
 
 </html>
