--- a/html/Rooms.html
+++ b/html/Rooms.html
@@ -23,11 +23,24 @@
                     <li><a href="/html/ContactUs.html">CONTACT US</a></li>
                     <li><a href="/html/Rooms.html">ROOMS</a></li>
                     <li><a href="/html/Login/login.html">LOGIN</a></li>
+                    <button onclick="simulateLogin()">Simulate Login</button>
+                    <button onclick="simulateLogout()">Simulate Logout</button>
                 </ul>
             </div>
         </nav>
+        
         <div class="menu" id="Menu">
             <h1>The <span> Rooms</span> </h1>
+
+
+
+            <div id="editReservationContainer" style="display: none;">
+                <a href="/html/editReservation.html" class="menu-btn">Edit Reservation</a>
+            </div>
+        
+
+
+
             <div class="menu-box">
                 <div class="menu-card">
                     <div class="menu-image">
