--- a/html/admin-dashboard.html/index.html
+++ b/html/admin-dashboard.html/index.html
@@ -22,19 +22,19 @@
 
         <ul class="side-menu">
             <li>
-                <a href="/html/admin-dashboard.html/index.html">
+                <a href="/html/admin-dashboard/index.html">
                     <i class='bx bxs-dashboard'></i>
                     <span class="text">Dashboard</span>
                 </a>
             </li>
             <li>
-                <a href="/html/admin-dashboard.html/makeRes.html">
+                <a href="/html/admin-dashboard.html/makeRes.php">
                     <i class='bx bx-bed'></i>
                     <span class="text">Available Rooms</span>
                 </a>
             </li>
             <li>
-                <a href="/html/admin-dashboard.html/reserved.html">
+                <a href="/html/admin-dashboard.html/reserved.php">
                     <i class='bx bx-calendar-check'></i>
                     <span class="text">View Reservations</span>
                 </a>
@@ -70,11 +70,11 @@
                         <div class="box-container">
                           <div class="nav-box">
                             <h2>Make Reservation</h2>
-                            <a href="/html/admin-dashboard.html/makeRes.html" class="btn"><i class='bx bx-calendar-plus'></i></a>
+                            <a href="/html/admin-dashboard.html/makeRes.php" class="btn"><i class='bx bx-calendar-plus'></i></a>
                           </div>
                           <div class="nav-box">
                             <h2>Edit Reservation</h2>
-                            <a href="/html/admin-dashboard.html/reserved.html" class="btn"><i class='bx bx-edit'></i></a>
+                            <a href="/html/admin-dashboard.html/reserved.php" class="btn"><i class='bx bx-edit'></i></a>
                           </div>
 
                         </div>
