--- a/html/BookingPage.html
+++ b/html/BookingPage.html
@@ -159,7 +159,7 @@
                 <ul>
                     <li><a href="home.html">HOME</a></li>
                     <li><a href="/html/AboutUs.html">ABOUT US</a></li>
-                    <li><a href="">CONTACT US</a></li>
+                    <li><a href="/html/ContactUs.html">CONTACT US</a></li>
                     <li><a href="/html/BookingPage.html">BOOKINGS</a></li>
                     <li><a href="/html/login.html">LOGIN</a></li>
                 </ul>
