--- a/html/Rooms.html
+++ b/html/Rooms.html
@@ -18,15 +18,12 @@
     
             <div class="links">
                 <ul>
-                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="/html/home.html">HOME</a></li>
                     <li><a href="/html/AboutUs.html">ABOUT US</a></li>
                     <li><a href="/html/ContactUs.html">CONTACT US</a></li>
                     <li><a href="/html/Rooms.html">ROOMS</a></li>
-                    <li><a href="/html/Login/login.html">LOGIN</a></li>
-                    <li><a href="/html/admin-dashboard.html/index.html">ADMIN</a></li>
+                    <li><a href="/html/Login/login.php">LOGIN</a></li>
 
-                    <button onclick="simulateLogin()">Simulate Login</button>
-                    <button onclick="simulateLogout()">Simulate Logout</button>
                 </ul>
             </div>
         </nav>
@@ -138,11 +135,7 @@
                     <div class="swiper-slide">
                         <img src="/images/room1.jpg" alt="Room 1">
                     </div>
-                    <!-- Slide 2 (Add more slides as needed) -->
-                    <div class="swiper-slide">
-                        <img src="/images/room2.jpg" alt="Room 2">
-                    </div>
-                    <!-- Add more slides if needed -->
+
                 </div>
                 <!-- Add Pagination -->
                 <div class="swiper-pagination"></div>
