--- a/html/Rooms.html
+++ b/html/Rooms.html
@@ -130,9 +130,7 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <!-- Slide 1 -->
-                    <div class="swiper-slide">
-                        <img src="/images/room1.jpg" alt="Room 1" style="max-width: 60%; height: auto;">
-                    </div>
+                    <div class="swiper-slide"></div>
 
                 </div>
                 <!-- Add Pagination -->
