--- a/html/ContactUs.html
+++ b/html/ContactUs.html
@@ -18,8 +18,8 @@
                     <li><a href="home.html">HOME</a></li>
                     <li><a href="/html/AboutUs.html">ABOUT US</a></li>
                     <li><a href="/html/ContactUs.html">CONTACT US</a></li>
-                    <li><a href="/html/Rooms.html">ROOMS</a></li>
-                    <li><a href="/html/Login/login.html">LOGIN</a></li>
+                    <li><a href="/html/Rooms.php">ROOMS</a></li>
+                    <li><a href="/html/Login/login.php">LOGIN</a></li>
                 </ul>
             </nav>
             <!-- <img src="menu.png" class="menu"> -->
