--- a/html/admin-dashboard/index.html
+++ b/html/admin-dashboard/index.html
@@ -28,19 +28,19 @@
                 </a>
             </li>
             <li>
-                <a href="/html/admin-dashboard.html/makeRes.php">
+                <a href="/html/admin-dashboard/makeRes.php">
                     <i class='bx bx-bed'></i>
                     <span class="text">Available Rooms</span>
                 </a>
             </li>
             <li>
-                <a href="/html/admin-dashboard.html/reserved.php">
+                <a href="/html/admin-dashboard/reserved.php">
                     <i class='bx bx-calendar-check'></i>
                     <span class="text">View Reservations</span>
                 </a>
             </li>
             <li>
-                <a href="/html/admin-dashboard.html/login.html">
+                <a href="/html/admin-dashboard/logout.php">
                     <i class='bx bx-log-in-circle'></i>
                     <span class="text">Logout</span>
                 </a>
@@ -70,11 +70,11 @@
                         <div class="box-container">
                           <div class="nav-box">
                             <h2>Make Reservation</h2>
-                            <a href="/html/admin-dashboard.html/makeRes.php" class="btn"><i class='bx bx-calendar-plus'></i></a>
+                            <a href="/html/admin-dashboard/makeRes.php" class="btn"><i class='bx bx-calendar-plus'></i></a>
                           </div>
                           <div class="nav-box">
                             <h2>Edit Reservation</h2>
-                            <a href="/html/admin-dashboard.html/reserved.php" class="btn"><i class='bx bx-edit'></i></a>
+                            <a href="/html/admin-dashboard/reserved.php" class="btn"><i class='bx bx-edit'></i></a>
                           </div>
 
                         </div>
