--- a/html/editReservation.html
+++ b/html/editReservation.html
@@ -21,10 +21,8 @@
                     <li><a href="home.html">HOME</a></li>
                     <li><a href="/html/AboutUs.html">ABOUT US</a></li>
                     <li><a href="/html/ContactUs.html">CONTACT US</a></li>
-                    <li><a href="/html/Rooms.html">ROOMS</a></li>
-                    <li><a href="/html/Login/login.html">LOGIN</a></li>
-                    <button onclick="simulateLogin()">Simulate Login</button>
-                    <button onclick="simulateLogout()">Simulate Logout</button>
+                    <li><a href="/html/Rooms.php">ROOMS</a></li>
+                    <li><a href="/html/Login/login.php">LOGIN</a></li>
                 </ul>
             </div>
         </nav>
