--- a/html/home.html
+++ b/html/home.html
@@ -20,7 +20,7 @@
                     <li><a href="home.html">HOME</a></li>
                     <li><a href="/html/AboutUs.html">ABOUT US</a></li>
                     <li><a href="/html/ContactUs.html">CONTACT US</a></li>
-                    <li><a href="/html/Rooms.html">ROOMS</a></li>
+                    <li><a href="/html/Rooms.php">ROOMS</a></li>
                     <li><a href="/html/Login/login.php">LOGIN</a></li>
                 </ul>
             </div>
