--- a/html/home.html
+++ b/html/home.html
@@ -17,9 +17,9 @@
     
             <div class="links">
                 <ul>
-                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="/html/home.html">HOME</a></li>
                     <li><a href="/html/AboutUs.html">ABOUT US</a></li>
-                    <li><a href="/html/ContactUs.html">CONTACT US</a></li>
+                    <li><a href="/php/contactus.php">CONTACT US</a></li>
                     <li><a href="/html/Rooms.php">ROOMS</a></li>
                     <li><a href="/html/Login/login.php">LOGIN</a></li>
                 </ul>
@@ -61,7 +61,7 @@
         <div class="content">
             <h1>Welcome to Magnolia Hotel !</h1>
             <p>Your sanctuary of serenity amidst the bustling world <br>Indulge in luxury, savor tranquility, and create timeless memories.</p> 
-            <a href="/html/Rooms.html"><button type="button">Indulge in luxury, Your room is just a click away</button></a>
+            <a href="/html/Rooms.php"><button type="button">Indulge in luxury, Your room is just a click away</button></a>
         </div>
     </section>
 
@@ -95,7 +95,7 @@
                     Unwind in an ambiance where every detail whispers sophistication, 
                     promising an experience beyond the ordinary. Welcome to a retreat where 
                     luxury is not just an amenity; it's an art form.</p>
-                     <a href="/html/Rooms.html" class="ctn">Learn More</a>
+                     <a href="/html/Rooms.php" class="ctn">Learn More</a>
             </div>
                  <div class="col">
                 <img src="/images/img2.webp" alt="">
@@ -105,7 +105,7 @@
                         Each dish is a masterpiece, meticulously crafted to redefine your palate's expectations. 
                         Immerse yourself in an experience where every bite is a journey into unparalleled flavor and sophistication. 
                         Welcome to a dining haven where excellence is the standard.</p>
-                        <a href="/html/dining.html" class="ctn">Learn More</a>
+                        <a href="/html/Rooms.php" class="ctn">Learn More</a>
 
             </div>
             
